# RelayPoint

./: .pre-commit-config.yaml  404.html  BUSINESS_VALUATION.md  CODE_QUALITY.md  COST_MODEL.md  DEVELOPMENT.md  DEVICE_POLICY.md  DOCK_WEBHOOK_SPEC.md  ENTERPRISE_DOCUMENTATION.md  IMPROVEMENTS.md  MANAGER_SCRIPT.md  PILOT_PITCH.md  PILOT_PLAN.md  PROCUREMENT_EMAIL.md  README.md  README_backup.md  REVENUE_STRATEGY.md  SAAS_ARCHITECTURE.md  SETUP.md  STATUS.md  dev.ps1  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  fix_code_issues.ps1  fix_code_issues.sh  index.html  package-lock.json  pyproject.toml  structure.html  temp_index.html
.github/workflows/: ci.yml  deploy-pages.yml  production.yml
.zencoder/rules/: repo.md
EXPERIMENTS/: ASSUMPTION_1_POLL_AND_EXPERIMENTS.md  ASSUMPTION_2_AI_TRUST_AND_AUTOMATION.md  ASSUMPTION_3_MEASURABLE_RESULTS.md  BOOKING_PAGE_COPY.md  EXPERIMENT_IDENTIFICATION_SUMMARY.md  MOU_ADDENDUM.md  PILOT_INVITE_SEQUENCE.md  WIZARD_OF_OZ_CHECKLIST_AND_CONSENT.md
EXPERIMENTS/ANALYTICS/: ASSUMPTION_3_ANALYTICS_TEMPLATE.csv  ASSUMPTION_3_ANALYTICS_TEMPLATE.md
EXPERIMENTS/FEATURES/: STAFF_FORECASTING.md
EXPERIMENTS/INTEGRATIONS/: CLOUDBEDS_SAMPLE_PAYLOAD.json
EXPERIMENTS/OUTREACH/: BOOKING_CONFIRMATION_EMAIL.md  DM_SNIPPETS.md  EMAIL_TEMPLATE_EMBASSY_ANDREA.md  EMAIL_TEMPLATE_EMBASSY_DAVID.md  LINKEDIN_OUTREACH_MESSAGES.md  LINKEDIN_POLL_COPY.md  LINKEDIN_POLL_FINAL_POSTS.md  LINKEDIN_POLL_SCHEDULE.md  LOGGING_SCRIPT_NOTES.md  ONE_PAGER_PILOT.md  OUTREACH_PLAYBOOK.md  POLL_HERO_IMAGES.md  POLL_MONITORING.csv  POLL_MONITORING_PLAYBOOK.md  PROSPECT_TEMPLATE.csv  SIMPLE_MOU.md
EXPERIMENTS/ROADMAP/: CLOUDBEDS_POC_PLAN.md  GH_ISSUES_PHASE1.md  PHASE1_ISSUES.md  PHASE_1_SPRINT_PLAN.md
EXPERIMENTS/STRATEGY/: HOTEL_OPERATIONS_NICHE.md
EXPERIMENTS/tracking/: README.md  micro_survey.md  weekly_manager_trust_survey.md  wizard_tracking_template.csv
HIRING/: JOB_SPEC_MOBILE_ENGINEER.md  JOB_SPEC_SENIOR_BACKEND_ENGINEER.md
backend/: .env  Dockerfile  Dockerfile.dev  alembic.ini  requirements.txt
backend/alembic/: README  env.py  script.py.mako
backend/app/: db.py  main.py  requirements.txt
backend/integrations/: CLOUDBEDS_SPEC.md
backend/scripts/: seed_forecasting_data.py
frontend/: .eslintrc.js  .prettierignore  Dockerfile  Dockerfile.dev  README.md  app.json  index.js  index.web.js  nginx.conf  package.json  tsconfig.json
frontend/public/: index.html  (+1 more)
scripts/: create_github_issues.sh
tools/: dock_controller_sample.py
(+172 files in other folders)
